--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 #score{
     float: left;
     font-size: 35px;
-  color: blue;
+  color: red;
   font-weight: bold;
+  
 }
 #timer{
     float: right;
@@ -13,17 +14,38 @@
 #show_sketch{
     float:right;
     font-size: 20px;
+    color: black;
 }
 #label{
     font-family: cursive;
+    color: black;
 }
 #confidence{
     font-family: cursive;
+    color: black;
 }
 h1{
 
 font-family: 'Rubik Distressed', cursive;
+background-color: aqua;
 }
 #mySketch{
     font-family: cursive;
+    color: black;
 }
+canvas{
+    border:5px solid white;
+    border-radius:20px;
+    animation-name: example;
+    animation-duration: 4s;
+    margin-top: 50px;
+    animation-iteration-count: infinite;
+    margin-right: 50px;
+}
+@keyframes example{
+    from{box-shadow: 1px 1px 38px red;}
+    to{box-shadow: 1px 1px 38px  yellow;}
+}
+ body{
+    background-color: darkblue;
+ }
